# pigma

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  other.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
crates/ncm-api/: Cargo.toml  README.md
crates/ncm-api/examples/: qr_login.rs
crates/ncm-api/src/: client.rs  cookie.rs  encrypt.rs  error.rs  lib.rs  model.rs
examples/: playerbar_cover.rs  short_braille.rs  yt-search.rs  yt.rs
src/: api.rs  app.rs  cache.rs  config.rs  event.rs  field.rs  input.rs  layout.rs  logger.rs  main.rs  playback.rs  state.rs  theme.rs  types.rs  ui.rs  utils.rs
src/app/: content.rs  login.rs  navigation.rs  search.rs  splash.rs
src/config/: border.rs  column.rs  navigation.rs  playerbar.rs  titles.rs
src/input/: command.rs  content.rs  login.rs  main.rs  navigation.rs  search.rs  splash.rs  table.rs
src/playback/: controller.rs  heartbeat.rs  mode.rs  player.rs  queue.rs  scan.rs  source.rs  storage.rs  types.rs
src/state/: command.rs  content.rs  login.rs  nav.rs  splash.rs
src/ui/: block.rs  breadcrumb.rs  command_panel.rs  content.rs  gradient_line_gauge.rs  login.rs  lyrics.rs  navigation.rs  playerbar.rs  queue.rs  spinner.rs  splash.rs  styled_text.rs  table.rs  text_input.rs  topbar.rs
src/utils/: gradient.rs  time.rs  youtube.rs
