[package]
name = "ncm-api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", default-features = false, features = [
  "default-tls",
  "json",
  "gzip",
  "charset",
] }
aes = "0.9.1"
rsa = { version = "0.9.10", features = ["pem"] }
md-5 = "0.11.0"
base64 = "0.22.1"
hex = "0.4.3"
rand = "0.10.2"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

thiserror = "2.0.18"
urlencoding = "2.1.3"
dirs = "6.0.0"
log = "0.4.33"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
qrcode = "0.14.1"
